--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^6.1.2",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
